examples/test/testpolicy4206.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4206
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key24: value12
      key4: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value31
      podSelector:
        matchLabels:
          key14: value35
          key41: value19
